# O365-jira-connect

./: .gitignore  README.rst  pyproject.toml
src/O365_jira_connect/: __init__.py  backend.py  cli.py  components.py  config.py  env.py  handlers.py  models.py  services.py  session.py  utils.py
src/O365_jira_connect/components/: __init__.py  models.py  token.py
src/O365_jira_connect/filters/: BlacklistFilter.py  JiraCommentNotificationFilter.py  RecipientControlFilter.py  SenderEmailBlacklistFilter.py  SenderEmailDomainWhitelistFilter.py  ValidateMetadataFilter.py  WhitelistFilter.py  __init__.py
src/O365_jira_connect/services/: __init__.py  issue.py  jira.py
src/O365_jira_connect/templates/: adf.py
src/O365_jira_connect/templates/j2/: notification.j2
src/O365_jira_connect/templates/messages/: jira.j2  notification.j2
tests/: conftest.py
tests/functional/: conftest.py
tests/integration/: conftest.py  test_issue.py  test_jira.py
tests/unit/: test_adf.py  test_issue.py  test_jira.py  test_templates.py
