[tool.poetry]
name = "O365-jira-connect"
version = "0.1.0"
description = "An integration service to connect O365 & Jira."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "LICENSE"
readme = "README.rst"
homepage = ""
repository = "https://github.com/rena2damas/O365-jira-connect"
documentation = ""
keywords = [
    "O365-jira-connect",
    "O365",
    "jira",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
jira = "^3.4.0"
O365 = "^2.0.19"
O365-notifications = "^0.1.1"
python = "^3.9"

[tool.poetry.dev-dependencies]
coverage = "^6.4.4"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
